[workspace]
members = ["crates/*", "examples/*"]
resolver = "2"

[workspace.package]
version = "0.7.0"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2024"
repository = "https://github.com/mbrea-c/bevy_animation_graph"

[workspace.dependencies]
bevy_animation_graph_proc_macros = { version = "0.7.0", path = "./crates/bevy_animation_graph_proc_macros" }
bevy_animation_graph = { version = "0.7.0", path = "./crates/bevy_animation_graph" }

bevy = { version = "0.16" }
avian3d = { version = "0.3.1" }
ron = "0.10.1"
