[workspace]
members = ["crates/*", "examples/*"]
resolver = "2"

[workspace.package]
version = "0.10.0"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2024"
repository = "https://github.com/mbrea-c/bevy_animation_graph"

[workspace.dependencies]
bevy_animation_graph_proc_macros = { version = "0.10.0", path = "./crates/bevy_animation_graph_proc_macros" }
bevy_animation_graph = { version = "0.10.0", path = "./crates/bevy_animation_graph" }
bevy_animation_graph_core = { version = "0.10.0", path = "./crates/bevy_animation_graph_core" }
bevy_animation_graph_builtin_nodes = { version = "0.10.0", path = "./crates/bevy_animation_graph_builtin_nodes" }

bevy = { version = "0.18" }
avian3d = { version = "0.5" }

egui_dock = "0.18"
egui-notify = { version = "0.21" }
egui = { version = "0.33" }
egui_extras = { version = "0.33", features = ["all_loaders"] }
bevy_egui = { version = "0.39" }
bevy-inspector-egui = { version = "0.36" }

ron = "0.10.1"
serde = { version = "1.0" }
