[package]
name = "bevy_animation_graph"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
description = "Animation graph library for the Bevy game engine"
keywords = ["bevy", "animation", "gamedev"]

[dependencies]
bevy = { workspace = true }
thiserror = "1.0.58"
ron = { workspace = true }
serde = { version = "1.0.193", features = ["derive", "rc"] }
indexmap = { version = "2.2.1", features = ["serde"] }
regex = "1.10.3"
uuid = "1.0"
rmp-serde = "1.3.0"
bevy_animation_graph_proc_macros = { version = "0.6.0", path = "../bevy_animation_graph_proc_macros" }
