[package]
name = "bevy_animation_graph_builtin_nodes"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
description = "Animation graph library for the Bevy game engine"
keywords = ["bevy", "animation", "gamedev"]

[dependencies]
bevy_animation_graph_proc_macros = { workspace = true }
bevy_animation_graph_core = { workspace = true }

bevy = { workspace = true }
thiserror = "1.0.58"
ron = { workspace = true }
serde = { workspace = true, features = ["derive", "rc"] }
indexmap = { version = "2.2.1", features = ["serde"] }
regex = "1.10.3"
uuid = "1.0"
rmp-serde = "1.3.0"
avian3d = { workspace = true, optional = true }

[features]
default = []
physics_avian = ["dep:avian3d", "bevy_animation_graph_core/physics_avian"]
