[package]
name = "bevy_animation_graph_editor"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
description = "Animation graph editor for the Bevy game engine"
keywords = ["bevy", "animation", "gamedev", "editor", "graph"]

[dependencies]
bevy = { workspace = true, features = ["file_watcher", "wayland", "reflect_documentation"] }
ron = { workspace = true }
derivative = "2.2.0"
bevy_animation_graph = { workspace = true }
clap = { version = "4.4.18", features = ["derive"] }
serde = { workspace = true }

egui_dock = "0.17"
egui-notify = { version = "0.20" }
egui = { version = "0.32" }
egui_extras = { version = "0.32", features = ["all_loaders"] }
bevy_egui = { version = "0.37" }
bevy-inspector-egui = { version = "0.34" }
avian3d = { workspace = true, optional = true }

rand = "0.9.0"
uuid = { version = "1.16.0", features = ["v4"] }

[features]
default = ["physics_avian"]
physics_avian = ["dep:avian3d", "bevy_animation_graph/physics_avian"]
