[package]
name = "bevy_animation_graph_proc_macros"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
description = "Procedural macros for the bevy animation graph crate"
keywords = ["bevy", "animation", "gamedev", "editor", "graph"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
